--- a/src/requisition-search/requisition-search.html
+++ b/src/requisition-search/requisition-search.html
@@ -27,9 +27,9 @@
         <fieldset>
             <legend>{{'requisitionSearch.dateInitiated' | message}}</legend>
             <label for=startDate>{{'requisitionSearch.from' | message}}</label>
-            <openlmis-datepicker input-id="startDate" value="vm.startDate" max-date="vm.endDate"></openlmis-datepicker>
+            <input id="startDate" type="date" ng-model="vm.startDate" max-date="vm.endDate"/>
             <label for=endDate>{{'requisitionSearch.to' | message}}</label>
-            <openlmis-datepicker input-id="endDate" value="vm.endDate" min-date="vm.startDate"></openlmis-datepicker>
+            <input id="endDate" type="date" ng-model="vm.endDate" min-date="vm.startDate"/>
         </fieldset>
         <input class="btn btn-primary" type="submit" value="{{'requisitionSearch.search' | message}}"/>
     </form>
@@ -44,43 +44,43 @@
             {{'requisitionSearch.noProgramsForFacility' | message}}
         </caption>
         <thead>
-        <tr>
-            <th>{{'requisitionSearch.program' | message}}</th>
-            <th>{{'requisitionSearch.facility' | message}}</th>
-            <th>{{'requisitionSearch.period' | message}}</th>
-            <th>{{'requisitionSearch.startDate' | message}}</th>
-            <th>{{'requisitionSearch.endDate' | message}}</th>
-            <th>{{'requisitionSearch.status' | message}}</th>
-            <th>{{'requisitionSearch.dateInitiated' | message}}</th>
-            <th>{{'requisitionSearch.emergency' | message}}</th>
-            <th popover="{{'requisitionSearch.offlineInfo' | message}}" popover-trigger-area="element">
-                {{'requisitionSearch.offline' | message}}
-            </th>
-            <th class="col-sticky sticky-right">{{'requisitionSearch.actions'| message}}</th>
-        </tr>
+            <tr>
+                <th>{{'requisitionSearch.program' | message}}</th>
+                <th>{{'requisitionSearch.facility' | message}}</th>
+                <th>{{'requisitionSearch.period' | message}}</th>
+                <th>{{'requisitionSearch.startDate' | message}}</th>
+                <th>{{'requisitionSearch.endDate' | message}}</th>
+                <th>{{'requisitionSearch.dateInitiated' | message}}</th>
+                <th>{{'requisitionSearch.status' | message}}</th>
+                <th>{{'requisitionSearch.emergency' | message}}</th>
+                <th popover="{{'requisitionSearch.offlineInfo' | message}}" popover-trigger-area="element">
+                    {{'requisitionSearch.offline' | message}}
+                </th>
+                <th class="col-sticky sticky-right">{{'requisitionSearch.actions'| message}}</th>
+            </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="requisition in vm.requisitions">
-            <td>{{requisition.program.name}}</td>
-            <td>{{requisition.facility.code}} - {{requisition.facility.name}}</td>
-            <td>{{requisition.processingPeriod.name}}</td>
-            <td>{{requisition.processingPeriod.startDate | openlmisDate}}</td>
-            <td>{{requisition.processingPeriod.endDate | openlmisDate}}</td>
-            <td>{{requisition.status}}</td>
-            <td>{{requisition.createdDate | openlmisDate}}</td>
-            <td class="col-emergency">
-                <i ng-class="{'icon-ok': requisition.emergency}"></i>
-            </td>
-            <td class="col-emergency">
-                <i ng-class="{'icon-ok': requisition.$availableOffline}"></i>
-            </td>
-            <td>
-                <button class="primary" ng-click="vm.openRnr(requisition.id)">{{'requisitionSearch.viewRequisition' | message}}</button>
-                <button class="danger" ng-if="requisition.$availableOffline"
+            <tr ng-repeat="requisition in vm.requisitions">
+                <td>{{requisition.program.name}}</td>
+                <td>{{requisition.facility.code}} - {{requisition.facility.name}}</td>
+                <td>{{requisition.processingPeriod.name}}</td>
+                <td>{{requisition.processingPeriod.startDate | openlmisDate}}</td>
+                <td>{{requisition.processingPeriod.endDate | openlmisDate}}</td>
+                <td>{{requisition.createdDate | openlmisDate}}</td>
+                <td>{{requisition.status}}</td>
+                <td class="col-emergency">
+                    <i ng-class="{'icon-ok': requisition.emergency}"></i>
+                </td>
+                <td class="col-emergency">
+                    <i ng-class="{'icon-ok': requisition.$availableOffline}"></i>
+                </td>
+                <td>
+                    <button class="primary" ng-click="vm.openRnr(requisition.id)">{{'requisitionSearch.viewRequisition' | message}}</button>
+                    <button class="danger" ng-if="requisition.$availableOffline"
                         ng-click="vm.removeOfflineRequisition(requisition)">{{'requisitionSearch.removeOfflineRequisition.label' | message}}
-                </button>
-            </td>
-        </tr>
+                    </button>
+                </td>
+            </tr>
         </tbody>
     </table>
     <openlmis-pagination/>
