--- a/src/requisition-batch-approval/requisition-batch-approval.html
+++ b/src/requisition-batch-approval/requisition-batch-approval.html
@@ -13,13 +13,13 @@
                 <thead>
                     <tr>
                         <th class="col-sticky" colspan="2">
-                            {{'requisitionBatchApproval.product' | message}}
+                          {{'requisitionBatchApproval.product' | message}}
                         </th>
                         <th ng-repeat="requisition in vm.requisitions track by requisition.id"
                             popover="{{requisition.$error}}"
                             colspan="2"
                             ng-class="{'requisition-error': requisition.$error,
-                                           'is-hidden': !(requisition)}">
+                                       'is-hidden': !(requisition)}">
                             {{requisition.facilityName}} - {{requisition.periodName}}
                         </th>
                         <th class="col-sticky col-sticky-right" colspan="2">{{'requisitionBatchApproval.totalForAllFacilities' | message}}</th>
@@ -35,34 +35,39 @@
                             ng-class="{'requisition-error': requisition.$error}">
                             {{'requisitionBatchApproval.cost' | message}}
                         </th>
-                        <th class="col-sticky col-sticky-right">{{'requisitionBatchApproval.quantity' | message}}</th>
-                        <th class="col-sticky col-sticky-right">{{'requisitionBatchApproval.cost' | message}}</th>
+                        <th class="col-sticky col-sticky-right" >{{'requisitionBatchApproval.quantity' | message}}</th>
+                        <th class="col-sticky col-sticky-right" >{{'requisitionBatchApproval.cost' | message}}</th>
                     </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="product in vm.productsToDisplay">
-                    <td class="col-sticky"> {{product.code}} </td>
-                    <td class="col-sticky requisition-product-grid-cell"><div class="collapsable">{{product.name}}</div></td>
-                    <td ng-repeat-start="requisition in vm.requisitions" class="numeric">
-                        <div ng-if="(product.requisitions | contains: requisition.id) && !(vm.lineItems[requisition.id][product.productId].skipped) && !vm.isInApproval(requisition)"
-                             class="input-control" input-control openlmis-invalid>
-                            <input positive-integer required validate-requisition="requisition" product-id="product.productId"
-                                   ng-model="vm.lineItems[requisition.id][product.productId].approvedQuantity"
-                                   ng-change="vm.updateLineItem(vm.lineItems[requisition.id][product.productId], requisition)"/>
-                        </div>
-                        <p ng-if="vm.lineItems[requisition.id][product.productId].skipped">
-                            {{'requisitionBatchApproval.skipped' | message}}
-                        </p>
-                        <p ng-if="!(vm.lineItems[requisition.id][productId].skipped) && vm.isInApproval(requisition)">
-                            {{vm.lineItems[requisition.id][productId].approvedQuantity}}
-                        </p>
-                    </td>
-                    <td class="numeric" ng-repeat-end>
-                        {{vm.lineItems[requisition.id][product.productId].totalCost | openlmisCurrency}}
-                    </td>
-                    <td class="total-cell numeric col-sticky col-sticky-right"> {{product.totalQuantity}} </td>
-                    <td class="total-cell numeric col-sticky col-sticky-right"> {{product.totalCost | openlmisCurrency}} </td>
-                </tr>
+                    <tr ng-repeat="product in vm.productsToDisplay">
+                        <td class="col-sticky"> {{product.code}} </td>
+                        <td class="col-sticky requisition-product-grid-cell"><div class="collapsable">{{product.name}}</div></td>
+                        <td ng-repeat-start="requisition in vm.requisitions" class="numeric">
+                            <!-- Malawi: disable edit for requisitions in approval -->
+                            <div ng-if="(product.requisitions | contains: requisition.id) && !(vm.lineItems[requisition.id][product.productId].skipped) && !vm.isInApproval(requisition)"
+                                class="input-control" input-control openlmis-invalid>
+                            <!-- ends here -->
+                            
+                                <input positive-integer required validate-requisition="requisition" product-id="product.productId"
+                                    ng-model="vm.lineItems[requisition.id][product.productId].approvedQuantity"
+                                    ng-change="vm.updateLineItem(vm.lineItems[requisition.id][product.productId], requisition)"/>
+                            </div>
+                            <p ng-if="vm.lineItems[requisition.id][product.productId].skipped">
+                                {{'requisitionBatchApproval.skipped' | message}}
+                            </p>
+                            <!-- Malawi: disable edit for requisitions in approval -->
+                            <p ng-if="!(vm.lineItems[requisition.id][productId].skipped) && vm.isInApproval(requisition)">
+                                {{vm.lineItems[requisition.id][productId].approvedQuantity}}
+                            </p>
+                            <!-- ends here -->
+                        </td>
+                        <td class="numeric" ng-repeat-end>
+                            {{vm.lineItems[requisition.id][product.productId].totalCost | openlmisCurrency}}
+                        </td>
+                        <td class="total-cell numeric col-sticky col-sticky-right"> {{product.totalQuantity}} </td>
+                        <td class="total-cell numeric col-sticky col-sticky-right"> {{product.totalCost | openlmisCurrency}} </td>
+                    </tr>
                 </tbody>
                 <tfoot>
                     <tr class="total-row">
@@ -80,13 +85,19 @@
             </table>
         </div>
     </form>
+    <!-- Malawi: added information about prices being indicative -->
     <h4 class="prices-info">{{'requisitionBatchApproval.pricesAreIndicative' | message }}</h4>
+    <!-- ends here -->
     <div class="openlmis-toolbar button-group" ng-if="vm.requisitions.length">
         <button ng-disabled="vm.isOffline()" ng-click="vm.sync()">{{'requisitionBatchApproval.sync' | message}}</button>
+        <!-- Malawi: added the ability to set all approved quantity to 0 -->
         <button ng-click="vm.setAllToZero()">{{'requisitionBatchApproval.setAllToZero' | message}}</button>
+        <!-- ends here -->
         <div class="button-group primary">
             <button class="primary" ng-disabled="vm.isOffline()" form="batch-approval-form" type="submit">{{'requisitionBatchApproval.approve' | message}}</button>
+            <!-- Malawi: removed the ability to reject requisition with in approval status -->
             <button class="danger" ng-click="vm.revert()" ng-if="!vm.requisitions.every(vm.isInApproval)">{{'requisitionBatchApproval.revert' | message}}</button>
+            <!-- ends here -->
         </div>
     </div>
 </div>
