Updated service versions to v3.9 RC1

--- a/src/stock-card/stock-card.html
+++ b/src/stock-card/stock-card.html
@@ -86,6 +86,7 @@
 
   <openlmis-pagination
     list="vm.stockCard.lineItems"
-    paged-list="vm.displayedLineItems">
+    paged-list="vm.displayedLineItems"
+    pagination-id="'stockCard'">
   </openlmis-pagination>
 </section>
