--- a/src/stock-adjustment-creation/adjustment-creation.html
+++ b/src/stock-adjustment-creation/adjustment-creation.html
@@ -65,18 +65,20 @@
                             ng-options="assignment.name for assignment in vm.srcDstAssignments" autofocus>
                         </select>
                     </td>
-                    <td ng-show="vm.srcDstAssignments">
+                    <!-- MALAWISUP-2452 -->
+                    <!-- <td ng-show="vm.srcDstAssignments">
                         <textarea ng-show="lineItem.assignment.isFreeTextAllowed" ng-model="lineItem.srcDstFreeText" rows="1" cols="15"></textarea>
-                    </td>
+                    </td> -->
                     <td ng-if="vm.showReasonDropdown" openlmis-invalid="{{lineItem.$errors.reasonInvalid ? 'openlmisForm.required' : '' | message}}" class="digit-cell">
                         <select ng-model="lineItem.reason"
                             ng-change="vm.validateReason(lineItem);vm.clearFreeText(lineItem, 'reasonFreeText')"
                             ng-options="reason as reason.name for reason in vm.reasons" autofocus>
                         </select>
                     </td>
-                    <td ng-if="vm.showReasonDropdown">
+                    <!-- <td ng-if="vm.showReasonDropdown">
                         <input type="text" ng-show="lineItem.reason.isFreeTextAllowed" ng-model="lineItem.reasonFreeText" rows="1" cols="15"></input>
-                    </td>
+                    </td> -->
+                    <!-- /MALAWISUP-2452 -->
                     <td openlmis-invalid="{{lineItem.$errors.quantityInvalid}}" class="digit-cell">
                         <input class="form-control" ng-model="lineItem.quantity"
                             ng-class="{'error': lineItem.$errors.quantityInvalid}"
