--- a/src/stock-adjustment-creation/adjustment-creation.html
+++ b/src/stock-adjustment-creation/adjustment-creation.html
@@ -45,9 +45,9 @@
                     <th ng-show="vm.showSrcDstFreeText">{{vm.key('srcDstComments') | message}}</th>
                     <!-- /MALAWISUP-2701 -->
                     <th ng-if="vm.showReasonDropdown">{{vm.key('reason') | message}}</th>
-                    <!-- MALAWISUP-2452 -->
-                    <!-- <th ng-if="vm.showReasonDropdown">{{vm.key('reasonComments') | message}}</th> -->
-                    <!-- /MALAWISUP-2452 -->
+                    <!-- MALAWISUP-2703 -->
+                    <th ng-if="vm.showReasonRemarks">{{vm.key('reasonComments') | message}}</th>
+                    <!-- MALAWISUP-2703 -->
                     <th>{{vm.key('quantity') | message}}</th>
                     <th ng-if="vm.showVVMStatusColumn">{{vm.key('vvmStatus') | message}}</th>
                     <th>{{vm.key('date') | message}}</th>
@@ -79,11 +79,11 @@
                             ng-options="reason as reason.name for reason in vm.reasons" autofocus>
                         </select>
                     </td>
-                    <!-- MALAWISUP-2452 -->
-                    <!-- <td ng-if="vm.showReasonDropdown">
+                    <!-- MALAWISUP-2703 -->
+                    <td ng-if="vm.showReasonRemarks">
                         <input type="text" ng-show="lineItem.reason.isFreeTextAllowed" ng-model="lineItem.reasonFreeText" rows="1" cols="15"></input>
-                    </td> -->
-                    <!-- /MALAWISUP-2452 -->
+                    </td>
+                    <!-- /MALAWISUP-2703 -->
                     <td openlmis-invalid="{{lineItem.$errors.quantityInvalid}}" class="digit-cell">
                         <input class="form-control" ng-model="lineItem.quantity"
                             ng-class="{'error': lineItem.$errors.quantityInvalid}"
